# wlgamma

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix  readme.md
src/: main.c
sys/: wlgamma.1
